Machine Learning Dataset Updated

--- a/Data Import and Prep-checkpoint.ipynb
+++ b/Data Import and Prep-checkpoint.ipynb
@@ -30,7 +30,12 @@
     "#pio.renderers.default='svg'\n",
     "from pingouin import kruskal\n",
     "#Declare FilePaths\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "\n",
+    "pd.options.display.max_rows = 4000\n"
    ]
   },
   {
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "3cd49d23-a721-4fa7-9dee-f986e705aa85",
    "metadata": {},
    "outputs": [],
@@ -87,40 +92,52 @@
     "orgArea_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\org_cropar_linear.csv\")\n",
     "fertRisk_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Pesiticide Use Risk Indicator\\aei_hri_linear.csv\")\n",
     "fertUse_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\aei_pestuse_linear.csv\")\n",
-    "fertUseGroup3_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Use of more hazardous pesticides\\sdg_02_52_linear.csv\")\n",
+    "#Dont Use, infufficient data\n",
+    "#fertUseGroup3_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Use of more hazardous pesticides\\sdg_02_52_linear.csv\")\n",
     "orgAreaUtil_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Organic Area\\sdg_02_40_linear.csv\")\n",
-    "orgProcessors_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Organic Processors\\org_cpreact_linear.csv\")"
+    "orgProcessors_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Organic Processors\\org_cpreact_linear.csv\")\n",
+    "wasteGeneration_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Resource Usage\\cei_pc030_linear.csv\")\n",
+    "productivityIndex_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\Organic Processors\\org_cpreact_linear.csv\")\n",
+    "countryGini_path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Quality of Life\\tessi190_linear.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "e9415700-e271-4d4a-8559-ae8e4c4b9eda",
    "metadata": {},
    "outputs": [],
    "source": [
     "orgProcessors = pd.read_csv(orgProcessors_path)\n",
     "orgProcessors  = orgProcessors[orgProcessors['nace_r2'].isin(['C103'])]\n",
+    "orgProcessors  = orgProcessors[orgProcessors['unit'].isin(['NR'])]\n",
     "orgProcessors = orgProcessors.drop(columns = ['DATAFLOW', 'LAST UPDATE','freq', 'unit', 'OBS_FLAG'])\n",
-    "orgProcessors = orgProcessors.rename(columns={\"OBS_VALUE\":\"areUsedForOrganic\"})"
+    "orgProcessors = orgProcessors.rename(columns={\"OBS_VALUE\":\"numOrganicProcessors\"})\n",
+    "print(orgProcessors.groupby('TIME_PERIOD').geo.size())\n",
+    "#print(orgProcessors.groupby('TIME_PERIOD').geo.nunique())\n",
+    "#print(orgProcessors.groupby(['TIME_PERIOD', 'geo']).geo.size())\n",
+    "orgProcessors.shape\n",
+    "orgProcessors.head(10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "cc966e49-9c24-4fc2-b9d0-73ea19e6ff0b",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "orgAreaUtil = pd.read_csv(orgAreaUtil_path)\n",
-    "orgAreaUtil.head()\n",
     "orgAreaUtil = orgAreaUtil.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'crops','freq', 'agprdmet', 'unit', 'OBS_FLAG'])\n",
-    "orgAreaUtil = orgAreaUtil.rename(columns={\"OBS_VALUE\":\"areUsedForOrganic\"})"
+    "orgAreaUtil = orgAreaUtil.rename(columns={\"OBS_VALUE\":\"areaUsedForOrganic\"})\n",
+    "orgAreaUtil.shape\n",
+    "orgAreaUtil.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "0e69d845-743f-4159-a3d3-a2fbd17d8706",
    "metadata": {},
    "outputs": [],
@@ -128,144 +145,21 @@
     "hriFertiliser = pd.read_csv(fertRisk_path)\n",
     "hriFertiliser  = hriFertiliser[hriFertiliser['subst_cat'].isin(['HRI1'])]\n",
     "hriFertiliser = hriFertiliser.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'unit', 'OBS_FLAG'])\n",
-    "hriFertiliser = hriFertiliser.rename(columns={\"OBS_VALUE\":\"harmRiskInd\"})"
+    "hriFertiliser = hriFertiliser.rename(columns={\"OBS_VALUE\":\"harmRiskInd\"})\n",
+    "#print(hriFertiliser.groupby('TIME_PERIOD').geo.nunique())\n",
+    "hriFertiliser.shape"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 54,
-   "id": "8fc7f7d6-ea3a-40a6-a01e-44d5bb8cf455",
+   "cell_type": "raw",
+   "id": "c0e686dc-001f-4127-9370-8893613d434b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "fertUseGroup3 = pd.read_csv(fertUseGroup3_path)\n",
-    "fertUseGroup3 = fertUseGroup3.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'subst_cat', 'unit', 'OBS_FLAG'])\n",
-    "fertUseGroup3 = fertUseGroup3.rename(columns={\"OBS_VALUE\":\"grp3FertUse\"})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
-   "id": "236e78f8-a5a1-495a-8daa-fc23f40604fc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>nace_r2</th>\n",
-       "      <th>geo</th>\n",
-       "      <th>TIME_PERIOD</th>\n",
-       "      <th>areUsedForOrganic_x</th>\n",
-       "      <th>areUsedForOrganic_y</th>\n",
-       "      <th>subst_cat</th>\n",
-       "      <th>harmRiskInd</th>\n",
-       "      <th>grp3FertUse</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>C103</td>\n",
-       "      <td>BG</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>2015877.0</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>HRI1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>C103</td>\n",
-       "      <td>BG</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>HRI1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>C103</td>\n",
-       "      <td>BG</td>\n",
-       "      <td>2018</td>\n",
-       "      <td>6162.0</td>\n",
-       "      <td>2.56</td>\n",
-       "      <td>HRI1</td>\n",
-       "      <td>83</td>\n",
-       "      <td>168</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>C103</td>\n",
-       "      <td>BG</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>8205201.0</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>HRI1</td>\n",
-       "      <td>98</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>C103</td>\n",
-       "      <td>BG</td>\n",
-       "      <td>2019</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>2.34</td>\n",
-       "      <td>HRI1</td>\n",
-       "      <td>98</td>\n",
-       "      <td>129</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  nace_r2 geo  TIME_PERIOD  areUsedForOrganic_x  areUsedForOrganic_y  \\\n",
-       "0    C103  BG         2018            2015877.0                 2.56   \n",
-       "1    C103  BG         2018                 85.0                 2.56   \n",
-       "2    C103  BG         2018               6162.0                 2.56   \n",
-       "3    C103  BG         2019            8205201.0                 2.34   \n",
-       "4    C103  BG         2019                 76.0                 2.34   \n",
-       "\n",
-       "  subst_cat  harmRiskInd  grp3FertUse  \n",
-       "0      HRI1           83          168  \n",
-       "1      HRI1           83          168  \n",
-       "2      HRI1           83          168  \n",
-       "3      HRI1           98          129  \n",
-       "4      HRI1           98          129  "
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import functools as ft\n",
-    "extraVars = [orgProcessors, orgAreaUtil, hriFertiliser, fertUseGroup3]\n",
-    "extraVars_df = ft.reduce(lambda left, right: pd.merge(left,right, on=['geo', 'TIME_PERIOD']), extraVars)\n",
-    "extraVars_df.head()"
+    "#fertUseGroup3 = pd.read_csv(fertUseGroup3_path)\n",
+    "#fertUseGroup3 = fertUseGroup3.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'subst_cat', 'unit', 'OBS_FLAG'])\n",
+    "#fertUseGroup3 = fertUseGroup3.rename(columns={\"OBS_VALUE\":\"grp3FertUse\"})\n",
+    "#print(fertUseGroup3.groupby('TIME_PERIOD').geo.nunique())\n",
+    "#fertUseGroup3.shape"
    ]
   },
   {
@@ -295,6 +189,8 @@
    "outputs": [],
    "source": [
     "missing_values_table(stdProduction)\n",
+    "print('Unique Geo:' + str(stdProduction.geo.nunique()))\n",
+    "print(stdProduction.groupby('TIME_PERIOD').geo.nunique())\n",
     "stdProduction.describe()\n",
     "stdProduction.info()"
    ]
@@ -328,7 +224,7 @@
     "orgArea_total = orgArea_total[(orgArea_total['area_HA'] != 0)] #Removes last NAN value in SET\n",
     "missing_values_table(orgArea_total)\n",
     "\n",
-    "del orgArea_all\n",
+    "#del orgArea_all\n",
     "\n",
     "orgTonne = pd.read_csv(orgTonne_path)\n",
     "orgTonne = orgTonne.rename(columns={\"OBS_VALUE\":\"tonnes\"})\n",
@@ -338,6 +234,7 @@
     "missing_values_table(orgTonne)\n",
     "\n",
     "orgProduction = pd.merge(orgArea_total, orgTonne, on=['crops', 'geo', 'TIME_PERIOD'], how='inner', suffixes=('_A','_T'))\n",
+    "print(orgProduction.groupby('TIME_PERIOD').geo.nunique())\n",
     "orgProduction.describe()\n",
     "orgProduction.info()\n"
    ]
@@ -352,6 +249,8 @@
     "cropProd = pd.merge( stdProduction, orgProduction, on=['crops', 'geo', 'TIME_PERIOD'], how='inner', suffixes=('_std','_org'))\n",
     "cropProd = pd.merge( cropProd, cropsCodes, on=['crops'], how='inner')\n",
     "cropProd['geo'] = cropProd['geo'].astype('str') \n",
+    "print(cropProd.groupby('TIME_PERIOD').geo.nunique())\n",
+    "hriFertiliser.shape\n",
     "cropProd.describe()\n",
     "cropProd.info()\n"
    ]
@@ -362,7 +261,13 @@
    "id": "93372301-3d76-4271-80b1-63c76c0ddfb9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "print(orgProduction.geo.unique())\n",
+    "print(stdProduction.geo.unique())\n",
+    "print(orgArea_all.geo.unique())\n",
+    "print(orgTonne.geo.unique())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -395,27 +300,37 @@
     "cropProdTotals_Geo_Y= cropProdTotals.groupby(['geo', 'TIME_PERIOD']).sum(numeric_only = True).reset_index()\n",
     "cropProdTotals_Geo= cropProdTotals.groupby(['geo']).sum(numeric_only = True).reset_index()\n",
     "cropProdTotals_crop_Y= cropProdTotals.groupby(['crops', 'crop_name', 'TIME_PERIOD']).sum(numeric_only = True).reset_index()\n",
-    "cropProdTotals_crop= cropProdTotals.groupby(['crops', 'crop_name']).sum(numeric_only = True).reset_index()\n"
+    "cropProdTotals_crop= cropProdTotals.groupby(['crops', 'crop_name']).sum(numeric_only = True).reset_index()\n",
+    "\n",
+    "cropProdTotals.shape\n",
+    "#cropProdTotals.head(10)\n",
+    "#print(cropProdTotals.groupby(['TIME_PERIOD', 'geo']).size())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "d21fe8db-6230-49fe-b11f-083570d5ff7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import functools as ft\n",
+    "extraVars = [cropProdTotals, orgProcessors, orgAreaUtil, hriFertiliser]\n",
+    "cropProdTotals_exp = ft.reduce(lambda left, right: pd.merge(left,right, how='left', on=['geo', 'TIME_PERIOD']), extraVars)\n",
+    "cropProdTotals_exp.shape\n",
+    "cropProdTotals_exp.head(10)\n",
+    "#print(extraVars_df.groupby(['TIME_PERIOD', 'geo']).size())\n",
+    "missing_values_table(cropProdTotals_exp)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "id": "d87d1752-bff3-4821-89c2-633a87b2fbe1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ipywidgets import Layout\n",
-    "\n",
-    "unique_geo = cropProdTotals_Geo_Y.PdDistrict.unique()\n",
-    "\n",
-    "country = widgets.SelectMultiple(\n",
-    "    options = unique_geo.tolist(),\n",
-    "    value = ['BAYVIEW', 'NORTHERN'],\n",
-    "    description='Country',\n",
-    "    disabled=False,\n",
-    "    layout = Layout(width='50%', height='80px', display='flex')\n",
-    ")"
+    "cropProdTotals_exp.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\cropProdTotals_exp.csv\")"
    ]
   },
   {
