--- a/Data Import and Prep.ipynb
+++ b/Data Import and Prep.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 81,
    "id": "dde3c216-da33-42af-97d7-65eaaabaf8ad",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 82,
    "id": "f0135390-2dd4-425c-97d0-e09365e5b218",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 83,
    "id": "4c96794a-4f9e-4138-b128-12f0cb804550",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 84,
    "id": "3cd49d23-a721-4fa7-9dee-f986e705aa85",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 85,
    "id": "0e69d845-743f-4159-a3d3-a2fbd17d8706",
    "metadata": {},
    "outputs": [],
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 86,
    "id": "e9415700-e271-4d4a-8559-ae8e4c4b9eda",
    "metadata": {},
    "outputs": [],
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 87,
    "id": "cc966e49-9c24-4fc2-b9d0-73ea19e6ff0b",
    "metadata": {},
    "outputs": [],
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 88,
    "id": "423e14a9",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 89,
    "id": "b8f3e91c",
    "metadata": {},
    "outputs": [],
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 90,
    "id": "7b92e69a",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 91,
    "id": "501eb89f",
    "metadata": {},
    "outputs": [],
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 92,
    "id": "2da88573",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 93,
    "id": "2530a851",
    "metadata": {},
    "outputs": [],
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 94,
    "id": "ae215de8",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 95,
    "id": "48acbf30-ef27-461b-8bdf-01f53b377e03",
    "metadata": {},
    "outputs": [],
@@ -368,8 +368,8 @@
     "#print(pestSales.pesticid.unique())\n",
     "#pestSales.head()\n",
     "\n",
-    "pestUse = pestUse.pivot(index=['pesticid','crops'], columns =['TIME_PERIOD', 'geo'], values='OBS_VALUE').reset_index() \n",
-    "#pestUse.columns = ['_'.join(col) for col in pestUse.columns.values]\n",
+    "pestUse = pestUse.pivot(index=['pesticid','crops'], columns =['geo', 'TIME_PERIOD'], values='OBS_VALUE').reset_index() \n",
+    "pestUse.columns = ['_'.join(col) for col in pestUse.columns.values]\n",
     "\n",
     "#pestUse.head(30)\n",
     "#pestUse.shape\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "id": "a663776e-3a5f-4eba-b461-dfc76ba864de",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "id": "f52d47aa-d6a2-4b5a-94d6-ecd02d844002",
    "metadata": {},
    "outputs": [],
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "id": "1ccf52fe-2038-4c86-a49e-51146039b99c",
    "metadata": {},
    "outputs": [],
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "id": "2eb3e29b-0fbc-4683-b29a-4ba6ee84bd83",
    "metadata": {},
    "outputs": [],
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "id": "58d88d14-181c-426c-a1e2-11e0f02ff213",
    "metadata": {},
    "outputs": [],
@@ -491,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 101,
    "id": "93372301-3d76-4271-80b1-63c76c0ddfb9",
    "metadata": {},
    "outputs": [],
@@ -514,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 102,
    "id": "ed5ae6c8-3c92-44a1-b3a0-d270b9c73af3",
    "metadata": {},
    "outputs": [],
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 103,
    "id": "590402ab",
    "metadata": {},
    "outputs": [],
@@ -549,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 104,
    "id": "d21fe8db-6230-49fe-b11f-083570d5ff7a",
    "metadata": {
     "tags": []
@@ -759,7 +759,7 @@
        "MEI_ET                              1                0.4"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 105,
    "id": "d87d1752-bff3-4821-89c2-633a87b2fbe1",
    "metadata": {},
    "outputs": [],
@@ -786,25 +786,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 106,
    "id": "0b25c97a-9527-4a10-ad4e-b155d2f23808",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'pestSales' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_73496\\3014908174.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mcropProdTotals_Geo_Y\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\cropProdTotals_Geo_Y.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpestSales\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\pestSales.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mpestUse\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mr\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\pestUse.csv\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pestSales' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cropProdTotals_Geo_Y.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\cropProdTotals_Geo_Y.csv\")\n",
-    "pestSales.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\pestSales.csv\")\n",
+    "#pestSales.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\pestSales.csv\")\n",
     "pestUse.to_csv(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Datasets\\pestUse.csv\")"
    ]
   },
@@ -852,6 +840,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8423c99b-8693-46d9-82a0-544a40fc864e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "296fb90a-ab8a-4d52-86c1-1d8b74e800bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3ec3dd4-a50d-43f7-949c-c4462ad92261",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0c89e492-52bd-454a-9a71-9243bffb0a39",
    "metadata": {},
    "outputs": [],
    "source": []
