Statistical Analysis - Continued

--- a/Data Import and Prep.ipynb
+++ b/Data Import and Prep.ipynb
@@ -229,7 +229,18 @@
    "execution_count": 6,
    "id": "edbe40bd-3431-4873-aa45-d7cc47b0749f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(262, 4)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#Organic Processors\n",
     "orgProcessors = pd.read_csv(orgProcessors_path)\n",
@@ -240,7 +251,7 @@
     "#print(orgProcessors.groupby('TIME_PERIOD').geo.size())\n",
     "#print(orgProcessors.groupby('TIME_PERIOD').geo.nunique())\n",
     "#print(orgProcessors.groupby(['TIME_PERIOD', 'geo']).geo.size())\n",
-    "#orgProcessors.shape\n",
+    "orgProcessors.shape\n",
     "#orgProcessors.info()\n",
     "#orgProcessors.head()"
    ]
@@ -566,11 +577,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "acb4f618-91a0-4c24-9aba-dcc90d73ea17",
+   "cell_type": "raw",
+   "id": "f0f691d4-bda9-45a0-9d01-97f4b630416f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "stdProduction_lin = pd.read_csv(stdProduction_path)\n",
     "stdProduction_lin = stdProduction_lin[stdProduction_lin['crops'].str.contains(\"0000\")]\n",
@@ -665,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "93372301-3d76-4271-80b1-63c76c0ddfb9",
    "metadata": {},
    "outputs": [],
@@ -709,30 +718,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "590402ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(279, 4)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#%whos DataFrame\n",
     "#hriPesticide.head()\n",
-    "#hriPesticide.shape"
+    "hriPesticide.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "d21fe8db-6230-49fe-b11f-083570d5ff7a",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(279, 30)"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import functools as ft\n",
     "#extraVars = [hriPesticide, orgProcessors, orgAreaUtil, countryGini, cropProdTotals_Geo_Y, birdBiodiversity, emplyomentRate, income, fertUse, productivityIndex, wasteGeneration]\n",
     "extraVars = [hriPesticide, orgProcessors, orgAreaUtil, countryGini, birdBiodiversity, emplyomentRate, income, fertUse, productivityIndex, wasteGeneration, pestSales, orgTonne, stdProduction_lin]\n",
     "rds = ft.reduce(lambda left, right: pd.merge(left,right, how='left', on=['geo', 'TIME_PERIOD']), extraVars)\n",
-    "#rds.shape\n",
+    "rds.shape\n",
     "#rds.head(20)\n",
     "#print(extraVars_df.groupby(['TIME_PERIOD', 'geo']).size())\n",
     "#missing_values_table(rds)#Will likely keep NAN values and use as a category when clustered to create scorecard perhaps?"
@@ -740,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "d87d1752-bff3-4821-89c2-633a87b2fbe1",
    "metadata": {},
    "outputs": [],
@@ -750,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "0b25c97a-9527-4a10-ad4e-b155d2f23808",
    "metadata": {},
    "outputs": [],
