Added R&D data, continued Stats

--- a/Data Import and Prep.ipynb
+++ b/Data Import and Prep.ipynb
@@ -61,7 +61,8 @@
    "source": [
     "cropsCodes = pd.read_csv(\"C:/Users/cianw/Documents/dataAnalytics/CA2/Data/Eurostat/Code Dictionary/crops.dic\", sep='\\t',names=['crops', 'crop_name'], header = None)\n",
     "strucproCodes = pd.read_csv(\"C:/Users/cianw/Documents/dataAnalytics/CA2/Data/Eurostat/Code Dictionary/strucpro.dic\",sep='\\t',names=['code', 'units'], header = None)\n",
-    "unitCodes = pd.read_csv(\"C:/Users/cianw/Documents/dataAnalytics/CA2/Data/Eurostat/Code Dictionary/unit.dic\",sep='\\t',names=['code', 'units'], header = None)"
+    "unitCodes = pd.read_csv(\"C:/Users/cianw/Documents/dataAnalytics/CA2/Data/Eurostat/Code Dictionary/unit.dic\",sep='\\t',names=['code', 'units'], header = None)\n",
+    "fordCodes = pd.read_csv(\"C:/Users/cianw/Documents/dataAnalytics/CA2/Data/Eurostat/Code Dictionary/ford.dic\",sep='\\t',names=['ford', 'units'], header = None)"
    ]
   },
   {
@@ -114,7 +115,13 @@
     "pestUse_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Agricultural Production\\Crops\\aei_pestuse_linear.csv\")\n",
     "\n",
     "#Farm Structure\n",
-    "farmStructure_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Farm Structure\\ef_lac_main_linear.csv\");"
+    "farmStructure_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Farm Structure\\ef_lac_main_linear.csv\");\n",
+    "\n",
+    "#Higher Education Spending\n",
+    "higherEdu_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Economics\\rd_e_gerdtot_linear.csv\");\n",
+    "\n",
+    "#R&D Spending\n",
+    "research_Path = Path(r\"C:\\Users\\cianw\\Documents\\dataAnalytics\\CA2\\Data\\Eurostat\\Economics\\rd_e_gerdsc_linear.csv\");"
    ]
   },
   {
@@ -559,6 +566,85 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "be7f617e-b697-4a0e-b2ed-e5149d49c5bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "higherEdu = pd.read_csv(higherEdu_Path)\n",
+    "\n",
+    "higherEdu = higherEdu[higherEdu['sectperf'].isin(['HES']) ]\n",
+    "higherEdu = higherEdu[higherEdu['unit'].isin(['EUR_HAB']) ]\n",
+    "higherEdu = higherEdu.drop(columns = ['DATAFLOW', 'LAST UPDATE', 'freq', 'OBS_FLAG', 'unit', 'sectperf'])\n",
+    "higherEdu = higherEdu.rename(columns={\"OBS_VALUE\":\"eduSpend_eur_hab\"})\n",
+    "\n",
+    "#print(higherEdu.groupby('TIME_PERIOD').geo.nunique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "8adffc95-9c6d-4291-90e4-497142d19876",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Your selected dataframe has 16 columns.\n",
+      "There are 14 columns that have missing values.\n",
+      "                                      Missing Values  % of Total Values\n",
+      "units                                                                  \n",
+      "Environmental biotechnology                      338               91.1\n",
+      "Animal and dairy science                         331               89.2\n",
+      "Agricultural biotechnology                       329               88.7\n",
+      "Other agricultural sciences                      329               88.7\n",
+      "Health sciences                                  327               88.1\n",
+      "Agriculture, forestry, and fisheries             326               87.9\n",
+      "Sociology                                        326               87.9\n",
+      "Veterinary science                               326               87.9\n",
+      "Humanities                                        18                4.9\n",
+      "Agricultural sciences                              8                2.2\n",
+      "Engineering and technology                         6                1.6\n",
+      "Social sciences                                    6                1.6\n",
+      "Natural sciences                                   4                1.1\n",
+      "Medical and health sciences                        3                0.8\n",
+      "Your selected dataframe has 8 columns.\n",
+      "There are 6 columns that have missing values.\n",
+      "                             Missing Values  % of Total Values\n",
+      "units                                                         \n",
+      "Humanities                               18                4.9\n",
+      "Agricultural sciences                     8                2.2\n",
+      "Engineering and technology                6                1.6\n",
+      "Social sciences                           6                1.6\n",
+      "Natural sciences                          4                1.1\n",
+      "Medical and health sciences               3                0.8\n",
+      "(371, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "research = pd.read_csv(research_Path)\n",
+    "research = pd.merge(research, fordCodes, on=['ford'], how='inner')\n",
+    "\n",
+    "research = research[research['sectperf'].isin(['TOTAL']) ]\n",
+    "research = research[research['ford'].isin(['FORD1','FORD2','FORD3','FORD4', 'FORD5', 'FORD6', 'FORD401', 'FORD402', 'FORD403', 'FORD404', 'FORD405', 'FORD504', 'FORD303', 'FORD208']) ]\n",
+    "research = research[research['unit'].isin(['EUR_HAB']) ]\n",
+    "research = research.pivot(index=['geo', 'TIME_PERIOD'], columns='units', values='OBS_VALUE').reset_index() \n",
+    "print(missing_values_table(research))\n",
+    "\n",
+    "#Unfortunately, the data on specific agricultural details was not readily avialable and had too many nulls, will delete columns with greater than 10% nulls as they are effectively useless.\n",
+    "researchColumns = list(research.drop(research.filter(regex=r'geo|TIME_PERIOD').columns, axis=1))\n",
+    "research_null = research[researchColumns].isnull().sum() / len(research)\n",
+    "missing_features_research = list(research_null[research_null > 0.1].index)\n",
+    "research = research.drop(missing_features_research, axis=1)\n",
+    "\n",
+    "print(missing_values_table(research))\n",
+    "print(research.shape)"
+   ]
+  },
+  {
    "cell_type": "raw",
    "id": "e6584a7e-33ff-4cd7-a044-7e9777c4aca4",
    "metadata": {},
@@ -674,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "id": "93372301-3d76-4271-80b1-63c76c0ddfb9",
    "metadata": {},
    "outputs": [],
@@ -718,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "590402ab",
    "metadata": {},
    "outputs": [
@@ -728,7 +814,7 @@
        "(279, 4)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -741,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "d21fe8db-6230-49fe-b11f-083570d5ff7a",
    "metadata": {
     "tags": []
@@ -750,10 +836,10 @@
     {
      "data": {
       "text/plain": [
-       "(279, 30)"
+       "(279, 37)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +847,7 @@
    "source": [
     "import functools as ft\n",
     "#extraVars = [hriPesticide, orgProcessors, orgAreaUtil, countryGini, cropProdTotals_Geo_Y, birdBiodiversity, emplyomentRate, income, fertUse, productivityIndex, wasteGeneration]\n",
-    "extraVars = [hriPesticide, orgProcessors, orgAreaUtil, countryGini, birdBiodiversity, emplyomentRate, income, fertUse, productivityIndex, wasteGeneration, pestSales, orgTonne, stdProduction_lin]\n",
+    "extraVars = [hriPesticide, orgProcessors, orgAreaUtil, countryGini, birdBiodiversity, emplyomentRate, income, fertUse, productivityIndex, wasteGeneration, pestSales, orgTonne, stdProduction_lin, higherEdu, research]\n",
     "rds = ft.reduce(lambda left, right: pd.merge(left,right, how='left', on=['geo', 'TIME_PERIOD']), extraVars)\n",
     "rds.shape\n",
     "#rds.head(20)\n",
@@ -771,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "id": "d87d1752-bff3-4821-89c2-633a87b2fbe1",
    "metadata": {},
    "outputs": [],
@@ -781,7 +867,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "id": "0b25c97a-9527-4a10-ad4e-b155d2f23808",
    "metadata": {},
    "outputs": [],
